--- a/site/edit/static/index.html
+++ b/site/edit/static/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Ant Design Landing - Ant Design Landing Page 的模板与规范</title>
-  <meta name="Description" content="Ant Design Landing 平台拥有丰富的各类首页模板，下载模板代码包，即可快速使用，也可使用首页编辑器，快速搭建一个属于你的专属首页" />
+  <title>Esenyun Open Platform - Esenyun Open Platform Page 的模板与规范</title>
+  <meta name="Description" content="Esenyun Open Platform 平台拥有丰富的各类首页模板，下载模板代码包，即可快速使用，也可使用首页编辑器，快速搭建一个属于你的专属首页" />
   <link rel="stylesheet" type="text/css" href="edit.css" />
   <link rel="icon" href="https://gw.alipayobjects.com/zos/rmsportal/XPHxlVUyZBsQhXBPheZl.png" type="image/x-icon">
   <!--[if lt IE 10]>
